--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- 검색엔진을 위한 영역 -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML은 약속된 명령어</title>
   </head>
   <body>
+    <!-- 브라우저를 위한 영역 -->
     <p>
       HTML이란?<br />
       네트워크가 연결된 웹페이지에서 문서를 작성하고, 읽고, 공유하기 위해서
@@ -20,5 +22,11 @@
       익스플로어 등등이 웹브라우저 입니다. 웹브라우저는 각자만의 특징과 장점이
       있지만 공통적으로 HTML,CSS 그리고 Javascript만을 인식할 수 있습니다.
     </p>
+
+    <div>
+      태그의 특징 <br />
+      1. 자기너비만 차지하는것(inline), 블록요소로 차지하는것(block) <br />
+      2. 종속태그 : select ol ul ...<br />
+    </div>
   </body>
 </html>
