--- a/class/01-html/02-signup.html
+++ b/class/01-html/02-signup.html
@@ -37,7 +37,7 @@
     <input type="password" placeholder="비밀번호를 입력해 주세요." />
     <input type="password" placeholder="비밀번호를 다시 입력해 주세요." />
     <select name="지역">
-      <option value="">지역을 선택하세요</option>
+      <option disabled="true">지역을 선택하세요</option>
       <option value="부산">부산</option>
       <option value="서울">서울</option>
       <option value="대전">대전</option>
