--- a/class/02-css/boxmodel.html
+++ b/class/02-css/boxmodel.html
@@ -8,7 +8,11 @@
       * {
         box-sizing: border-box;
       }
-      div {
+      .wrap {
+        display: flex;
+      }
+      div.cbox,
+      .bbox {
         width: 80px;
         height: 80px;
         border: 1px solid #000;
@@ -23,8 +27,10 @@
     </style>
   </head>
   <body>
-    <div class="cbox">박스1</div>
-    <div>박스2</div>
-    <div class="bbox">박스3</div>
+    <div class="wrap">
+      <div class="cbox">박스1</div>
+      <div class="cbox">박스2</div>
+      <div class="bbox">박스3</div>
+    </div>
   </body>
 </html>
