--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>🍋수경수의 미니홈피🍋</title>
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="background">
+      <div class="outerbox">
+        <div class="wrapper">
+          <div class="wrapper__left">
+            <div class="wrapper__left__header"></div>
+            <div class="wrapper__left__body">
+              <div class="left__body_header"></div>
+              <div class="left__body_profile"></div>
+              <div class="left__body_footer"></div>
+            </div>
+          </div>
+          <div class="wrapper__right"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
