--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🍋수경수의 미니홈피🍋</title>
-    <link rel="stylesheet" href="./styles/index.css" />
-  </head>
-  <body>
-    <div class="background">
-      <div class="outerbox">
-        <div class="wrapper">
-          <div class="wrapper__left">
-            <div class="wrapper__left__header"></div>
-            <div class="wrapper__left__body">
-              <div class="left__body_header"></div>
-              <div class="left__body_profile"></div>
-              <div class="left__body_footer"></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🍋수경수의 미니홈피🍋</title>
+  <link rel="stylesheet" href="./styles/index.css" />
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/variable/woff2/SUITE-Variable.css" rel="stylesheet">
+
+</head>
+
+<body>
+  <div class="background">
+    <div class="outerbox">
+      <div class="wrapper">
+        <div class="wrapper__left">
+          <div class="wrapper__left__header">
+            <div class="left__body__header">
+              <div class="left__body__header_gray"></div>
+              <div class="left__body__header_line"></div>
+            </div>
+            <div class="today">
+              <span>TODAY</span>
+              <span>34</span>
+              <span> | TOTAL</span>
+              <span>144334</span>
             </div>
           </div>
-          <div class="wrapper__right"></div>
+          <div class="wrapper__left__body">
+            <div class="left__body_header"></div>
+            <div class="left__body_profile"></div>
+            <div class="left__body_footer"></div>
+          </div>
         </div>
+        <div class="wrapper__right"></div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
