개발자도구 설명

--- a/class/03-javascript/variable.html
+++ b/class/03-javascript/variable.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="./variable.js"></script>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script src="./variable.js"></script>
+</head>
+
+<body></body>
+
 </html>
+
+
+<!-- 
+  요소 : html  분석하고 수정해 볼 수 있는 도구
+  콘솔 : 현재 로딩된 페이지에서 자바스크립트를 시험하거나
+  로그/오류 메세지 등을 호가인할 수 있는 도구
+  소스 :  현재 로딩된 페이지에서 사용된 리소스를 열람할 수 있는 도구
+  네트워크 : 서버와의 통신 내역을 보여주는 도구
+  성능 : 웹 어플리케이션의 성능을 향상시킬 방법을 컨설팅해주는  도구
+-->
