--- a/class/03-javascript/variable.html
+++ b/class/03-javascript/variable.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <script src="./array.js"></script>
+  <script src="./연습-01-array.js"></script>
 </head>
 
 
