--- a/class/03-javascript/variable.html
+++ b/class/03-javascript/variable.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./연습-02-email-split.js"></script>
+    <script src="./연습-03-object.js"></script>
   </head>
 
   <body></body>
