--- a/class/03-javascript/04-document.html
+++ b/class/03-javascript/04-document.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom 연습</title>
+    <script src="./04-document.js"></script>
 </head>
 <body>
     
