--- a/class/01-html/04-document.html
+++ b/class/01-html/04-document.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dom</title>
     <script src="../03-javascript/04-document.js"></script>
 </head>
+
 <body>
-    
+    <div id="target">HI</div>
+    <button onclick="greeting()">button입니다</button>
+    <input  id="inputTest">
 </body>
+
 </html>
