--- a/class/03-javascript/05-function.html
+++ b/class/03-javascript/05-function.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./05-function.js">
+    <script src="./timer.js">
         // function auth() {
         //     const token = String(Math.floor(Math.random() * 100000)).padStart(6, "0")
         //     document.getElementById("target").innerText = token
