--- a/class/03-javascript/timer.html
+++ b/class/03-javascript/timer.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>인증번호전송_타이머 만들기</title>
+    <script src="./timer.js"></script>
 </head>
 <body>
-    
+    <div id="target">000000</div>
+    <button onclick="auth()">인증번호 전송</button>
+    <div id="timer"></div>
+</body>
 </body>
 </html>
