타이머 인증완료 _ 완성

--- a/class/03-javascript/05-function.html
+++ b/class/03-javascript/05-function.html
@@ -17,6 +17,7 @@
 <body>
     <div id="target">000000</div>
     <button onclick="auth()">인증번호 전송</button>
+    <div id="timer">3:00</div>
 </body>
 
 </html>
