--- a/class/03-javascript/timer.html
+++ b/class/03-javascript/timer.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <div id="target">000000</div>
+    <br>
     <button onclick="auth()">인증번호 전송</button>
     <div id="timer"></div>
+    <br>
+    <button id="finish">인증완료</button>
 </body>
 </body>
 </html>
