--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
       1. 자기너비만 차지하는것(inline), 블록요소로 차지하는것(block) <br />
       2. 종속태그 : select ol ul ...<br />
     </div>
+   <div>test</div>
   </body>
 </html>
