--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -34,7 +34,7 @@
               <div class="left__body__header_line"></div>
             </div>
             <div class="left__body_profile">
-              <div>이름</div>
+              <div>변경 아직 못함 이름</div>
               <div>phone</div>
               <div>E-mail</div>
               <div>인스타그램</div>
